tests/baselines/reference/parserErrorRecovery_Expression1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_Expression1.ts (1 errors) ====
    var v = ()({});
             ~
!!! parserErrorRecovery_Expression1.ts(1,10): error TS1109: Expression expected.